Add splash screen, minor fixes